[gd_scene load_steps=10 format=3 uid="uid://w7m6tehvvy3g"]

[ext_resource type="Script" uid="uid://dlwkp0b4dx13s" path="res://scripts/player.gd" id="1_qt7d6"]
[ext_resource type="Texture2D" uid="uid://q488l1mkhd37" path="res://assets/textures/小幽灵.png" id="2_8cdkg"]
[ext_resource type="Texture2D" uid="uid://dbdmbsqod86kd" path="res://assets/textures/CloudTexture.png" id="3_8vxmb"]
[ext_resource type="Script" uid="uid://dt46da267fwmt" path="res://scenes/camera_controller.gd" id="4_8cdkg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_56dyf"]
atlas = ExtResource("2_8cdkg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nss6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56dyf")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n4sts"]
radius = 27.0
height = 92.0

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Player" type="Area2D" node_paths=PackedStringArray("player_sprite", "particle_trails", "death_particles", "camera") groups=["Player"]]
z_index = 2
collision_layer = 2
script = ExtResource("1_qt7d6")
player_sprite = NodePath("AnimatedSprite2D")
particle_trails = NodePath("ParticleTrails")
death_particles = NodePath("DeathParticles")
camera = NodePath("Camera2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_4nss6")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_n4sts")

[node name="ParticleTrails" type="CPUParticles2D" parent="."]
position = Vector2(0, 42)
emitting = false
amount = 20
texture = ExtResource("3_8vxmb")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_8cdkg")
min_position = Vector2(-1000, -1000)
max_position = Vector2(1000, 1000)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
